objects/fferpcore__SlackChannelEvent__e.object
<CustomObject>
    <description>Tracks details of related Slack channels.</description>
    <fields>
        <fullName>fferpcore__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Slack channel is archived.</description>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__ChannelId__c</fullName>
        <description>The ID of the Slack channel.</description>
        <label>Channel ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ChannelName__c</fullName>
        <description>The name of the Slack channel.</description>
        <label>Channel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Slack channel is deleted.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__ErrorCode__c</fullName>
        <description>A code representing an error that occurred.</description>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Members__c</fullName>
        <description>The list of users who are associated with the Slack channel.</description>
        <label>Channel Members</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__Ok__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the event was successful.</description>
        <label>OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__SalesforceObjectId__c</fullName>
        <description>The identifier for the Salesforce record.</description>
        <label>Salesforce Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Slack Channel Event</label>
    <pluralLabel>Slack Channel Events</pluralLabel>
</CustomObject>